--- a/src/app/pages/customs-brokerage/customs-brokerage.component.scss
+++ b/src/app/pages/customs-brokerage/customs-brokerage.component.scss
@@ -13,3 +13,8 @@ mat-tab {
   font-size: 20px;
   color: plum;
 }
+
+body { 
+  background: url(../../../assets/images/Antelope02.jpg) no-repeat center fixed; 
+  background-size: cover;
+}
