--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,3 +32,8 @@ body {
     --color: #f9fafb;
   }
   
+  html { 
+    background: url(../src/assets/images/BirdWater.jpg) no-repeat center fixed; 
+    background-size: cover;
+  }
+  
