--- a/src/app/pages/air-ams/air-ams.component.scss
+++ b/src/app/pages/air-ams/air-ams.component.scss
@@ -2,6 +2,8 @@
   padding: 5px;
   border: 1px solid #b6b6b6;
   box-sizing: content-box;
+  max-width: 90%;
+  margin: auto;
 }
 
 div.container {
@@ -30,5 +32,5 @@ mat-form-field {
 }
 
 table {
-  width: 100%
+  width: 100%;
 }
