--- a/src/app/home/navigation/navigation.component.scss
+++ b/src/app/home/navigation/navigation.component.scss
@@ -1,33 +1,28 @@
 .sidenav-container {
-  position: flex;
   height: auto;
   bottom: auto;
-  left: 0;
-  right: 0;
+  margin: auto;
   background-color: beige;
   border-radius: 5px;
 }
 
-.sidenav {
-  width: 200px;
+mat-sidenav-content {
   height: auto;
+  background-color: red; /* For browsers that do not support gradients */
+  background-image: linear-gradient(beige, rgb(255, 255, 255));
   margin: auto;
+}
+
+mat-sidenav {
+  width: 200px;
+  padding: 20px;
   background-color: rgb(94, 94, 63);
   a:hover {
     color: lime;
     cursor: pointer;
     font-size: medium;
   }
-
-  // a:visited {
-  //   color: rgba(34, 56, 4, 0.863)
-  // }
 }
-
-// .sidenav .mat-toolbar {
-//   background: inherit;
-
-// }
 
 .mat-toolbar.mat-primary {
   position: sticky;
@@ -38,24 +33,6 @@
 .toolbar-filler {
   flex: 1 1 auto;
 }
-
-// :host {
-//   display: flex;
-//   flex-direction: column;
-//   outline: none;
-//   width: 100%;
-//   background-color: rgb(151, 178, 32);
-
-//   .mat-list-item.active {
-//     background-color: yellowgreen;
-//   }
-//   &:hover,
-//   &:focus {
-//     > .mat-list-item:not(.expanded) {
-//       background-color: ivory;
-//     }
-//   }
-// }
 
 mat-menu-item {
   font-size: medium;
@@ -77,13 +54,6 @@ h1 {
 .a {
   border-radius: 5px;
   margin: 0 8px;
-}
-
-mat-sidenav-content {
-  height: auto;
-  background-color: red; /* For browsers that do not support gradients */
-  background-image: linear-gradient(beige, rgb(255, 255, 255));
-  margin: auto;
 }
 
 h3,
