updated footer and header

--- a/src/app/account/auth/login02/login02.component.html
+++ b/src/app/account/auth/login02/login02.component.html
@@ -1,7 +1,63 @@
-<mat-toolbar>
-  <span class="material-icons">face</span>
-  <h1>ANA Link, Ltd</h1>
-</mat-toolbar>
+<app-header></app-header>
+
+<div fxLayout="row" fxLayoutAlign="center center">
+  <mat-card fxFlex="30">
+    <img
+      src="https://cdn.pixabay.com/photo/2022/01/15/02/07/windows-6938478_960_720.jpg"
+    />
+  </mat-card>
+  <mat-card fxFlex="30">
+    <ul style="font-weight: bolder; color: rgb(69, 21, 200)">
+      Manufactuers / Shippers can
+      <li>Apply for Customs' assigned number</li>
+      <li>Obtain a continuous/annual bond</li>
+      <li>Clear U.S. Customs</li>
+      <li>Pay the duty online</li>
+      <li>Proof of Delivery</li>
+    </ul>
+  </mat-card>
+</div>
+<div fxLayout="row" fxLayoutAlign="center center">
+  <mat-card fxFlex="40">
+    <ul style="font-weight: bolder; color: chartreuse">
+      Importers or Exporters can
+      <li>Check duty payments</li>
+      <li>Detailed entry report</li>
+      <li>Liquidaiton report</li>
+      <li>Entry & PGA status</li>
+      <li>Delivery Status</li>
+    </ul>
+  </mat-card>
+  <mat-card fxFlex="40">
+    <img
+      src="https://cdn.pixabay.com/photo/2022/01/15/02/07/windows-6938478_960_720.jpg"
+    />
+  </mat-card>
+</div>
+
+<div fxLayout="row" fxLayoutAlign="center center">
+  <mat-card fxFlex="40">
+    <img
+      src="https://cdn.pixabay.com/photo/2022/01/15/02/07/windows-6938478_960_720.jpg"
+    />
+  </mat-card>
+  <mat-card fxFlex="40">
+    <ul style="font-weight: bolder; color: rgb(144, 107, 189)">
+      Forwarders can
+      <li>Check the entry status for clients</li>
+      <li>Upload documents for Customs' clearance</li>
+      <li>Duty reports for each client</li>
+      <li>Delivery status</li>
+      <li>Print entry documents</li>
+    </ul>
+  </mat-card>
+</div>
+<div fxLayout="row" fxLayoutAlign="center center">box 4</div>
+<div fxLayout="row" fxLayoutAlign="center center">box 5</div>
+<div fxLayout="row" fxLayoutAlign="center center">box 6</div>
+<div fxLayout="row" fxLayoutAlign="center center">box 7</div>
+<div fxLayout="row" fxLayoutAlign="center center">box 8</div>
+<div fxLayout="row" fxLayoutAlign="center center">box 9</div>
 
 <mat-card class="wrapper">
   <div class="login-wrapper" fxLayout="row" fxLayoutAlign="center center">
@@ -13,7 +69,7 @@
     >
       <mat-card class="box">
         <mat-card-header>
-          <mat-card-title>Log in ANA Link</mat-card-title>
+          <mat-card-title>Log In</mat-card-title>
         </mat-card-header>
 
         <form
@@ -291,11 +347,11 @@
 </div>
 
 <div fxLayout="row" fxLayoutAlign="space-around center">
-  <mat-card fxFlex="35" >
+  <mat-card fxFlex="35">
     <mat-card-header>
       <mat-card-title> Other Service Providers </mat-card-title>
     </mat-card-header>
-    <mat-card-content >
+    <mat-card-content>
       <ul style="font-weight: bolder; color: darkkhaki">
         <li>Upload documents</li>
         <li>Download documents</li>
@@ -313,10 +369,13 @@
     </mat-card-content>
   </mat-card>
 
-  <mat-card fxFlex="35" >
-    
-    <img mat-card-lg-image fxLayoutAlign="stretch" src='https://cdn.pixabay.com/photo/2022/01/15/02/07/windows-6938478_960_720.jpg' >
+  <mat-card fxFlex="35">
+    <img
+      mat-card-lg-image
+      fxLayoutAlign="stretch"
+      src="https://cdn.pixabay.com/photo/2022/01/15/02/07/windows-6938478_960_720.jpg"
+    />
   </mat-card>
 </div>
 
-<footer>&copy; Coprighted by ANA Link - 2022</footer>
+<app-footer></app-footer>
