--- a/src/app/account/auth/login02/login02.component.scss
+++ b/src/app/account/auth/login02/login02.component.scss
@@ -3,31 +3,32 @@ body {
   height: 100%;
 }
 
-body {
-  margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
-  min-height: 100vh;
-  background: #e2e2e2;
-}
+// body {
+//   margin: 0;
+//   font-family: Roboto, "Helvetica Neue", sans-serif;
+//   min-height: 50vh;
+//   background: #e2e2e2;
+// }
 
-.app-header {
-  justify-content: space-between;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 2;
-  box-shadow: 0 3px 5px -1px rgba(0, 0, 0, .2), 0 6px 10px 0 rgba(0, 0, 0, .14), 0 1px 18px 0 rgba(0, 0, 0, .12);
-}
+// .app-header {
+//   justify-content: space-between;
+//   position: fixed;
+//   top: 0;
+//   left: 0;
+//   right: 0;
+//   z-index: 2;
+//   box-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.2),
+//     0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12);
+// }
 
 .login-wrapper {
   height: 100%;
 }
 
-.positronx {
-  text-decoration: none;
-  color: #ffffff;
-}
+// .positronx {
+//   text-decoration: none;
+//   color: #ffffff;
+// }
 
 .box {
   position: relative;
@@ -47,11 +48,11 @@ body {
 }
 
 .box.back {
-  transform: scale(.95);
-  -webkit-transform: scale(.95);
-  -ms-transform: scale(.95);
+  transform: scale(0.95);
+  -webkit-transform: scale(0.95);
+  -ms-transform: scale(0.95);
   top: -20px;
-  opacity: .8;
+  opacity: 0.8;
   z-index: -1;
 }
 
@@ -62,11 +63,11 @@ body {
   border-radius: 10px;
   position: absolute;
   top: -10px;
-  background: rgba(255, 255, 255, .6);
+  background: rgba(255, 255, 255, 0.6);
   left: 0;
-  transform: scale(.95);
-  -webkit-transform: scale(.95);
-  -ms-transform: scale(.95);
+  transform: scale(0.95);
+  -webkit-transform: scale(0.95);
+  -ms-transform: scale(0.95);
   z-index: -1;
 }
 
@@ -76,10 +77,10 @@ body {
   width: 100%;
 }
 
-.login-wrapper .example-full-width,
-.login-wrapper .btn-block {
-  width: 100%;
-}
+// .login-wrapper .example-full-width,
+// .login-wrapper .btn-block {
+//   width: 100%;
+// }
 
 .login-wrapper mat-card-header {
   text-align: center;
@@ -88,47 +89,45 @@ body {
   font-weight: 700;
 }
 
-.login-wrapper mat-card-header mat-card-title {
-  font-size: 30px;
-  margin: 20;
-}
+// .login-wrapper mat-card-header mat-card-title {
+//   font-size: 30px;
+//   margin: 20;
+// }
 
 .login-wrapper .mat-card {
   padding: 40px 70px 50px;
 }
 
-.login-wrapper .mat-stroked-button {
-  border: 2px double blue;
-  line-height: 54px;
-  background: #FFF7FA;
-}
+// .login-wrapper .mat-stroked-button {
+//   border: 2px double blue;
+//   line-height: 54px;
+//   background: #fff7fa;
+// }
 
-.login-wrapper .mat-form-field-appearance-legacy .mat-form-field-infix {
-  padding: 0.8375em 0;
-}
+// .login-wrapper .mat-form-field-appearance-legacy .mat-form-field-infix {
+//   padding: 0.8375em 0;
+// }
 
-.example-card img {
-  max-width: 400px;
-  height: auto;
-  margin-top: 20px;
-}
-
+// .example-card {
+//   max-width: 400px;
+//   height: auto;
+//   margin-top: 20px;
+// }
 
 .wrapper {
-  background-image: url('https://cdn.pixabay.com/photo/2022/01/13/16/37/trees-6935614__340.jpg') ;
+  background-image: url("https://cdn.pixabay.com/photo/2022/01/13/16/37/trees-6935614__340.jpg");
 }
 
-background-image {
-  background-size: auto;
-  background-size: cover;
-}
+// background-image {
+//   background-size: auto;
+//   background-size: cover;
+// }
 
-li {
-  border: 20px
-}
+// li {
+//   border: 20px;
+// }
 
-ul {
-  padding: 20px;
-  font-size: larger;
-}
-
+// ul {
+//   padding: 20px;
+//   font-size: larger;
+// }
