--- a/src/app/home/navigation/navigation.component.scss
+++ b/src/app/home/navigation/navigation.component.scss
@@ -4,7 +4,7 @@
   bottom: auto;
   left: 0;
   right: 0;
-  background-color:beige;
+  background-color: beige;
   border-radius: 5px;
 }
 
@@ -13,15 +13,15 @@
   margin-top: 60px;
   background-color: rgb(156, 156, 144);
   a:hover {
-    color:lime;
+    color: lime;
     cursor: pointer;
     font-size: medium;
   }
 
-  a:visited {
-    color: rgba(34, 56, 4, 0.863)
+  a:hover {
+    font-size: 20px;
+    border: 2px solid #777;
   }
-
 }
 
 // .sidenav .mat-toolbar {
@@ -36,9 +36,8 @@
 }
 
 .toolbar-filler {
-  flex: 1 1 auto
+  flex: 1 1 auto;
 }
-
 
 :host {
   display: flex;
@@ -52,20 +51,19 @@
   }
   &:hover,
   &:focus {
-    >.mat-list-item:not(.expanded) {
+    > .mat-list-item:not(.expanded) {
       background-color: ivory;
     }
   }
 }
 
 mat-menu-item {
-  font-size:medium;
+  font-size: medium;
   padding: 8px 0;
   display: flex;
   width: auto;
 
-
-.routeIcon {
+  .routeIcon {
     margin-right: 40px;
   }
 }
@@ -73,7 +71,7 @@ mat-menu-item {
 h1 {
   margin: auto;
   font-weight: bolder;
-  text-shadow: 0 0 3px #FF0000;
+  text-shadow: 0 0 3px #ff0000;
 }
 
 .a {
@@ -88,7 +86,8 @@ mat-sidenav-content {
   margin: auto;
 }
 
-h3, mat-icon {
+h3,
+mat-icon {
   margin: auto;
 }
 
@@ -99,7 +98,7 @@ h3, mat-icon {
 }
 
 img {
-  background-color: rgb(20, 72, 216) ;
+  background-color: rgb(20, 72, 216);
   border-radius: 50%;
 }
 
