--- a/src/app/home/navigation/navigation.component.scss
+++ b/src/app/home/navigation/navigation.component.scss
@@ -1,6 +1,5 @@
 .sidenav-container {
-  position: flex;
-  top: 60px;
+  height: auto;
   bottom: auto;
   left: 0;
   right: 0;
@@ -8,26 +7,23 @@
   border-radius: 5px;
 }
 
-.sidenav {
+mat-sidenav-content {
+  height: auto;
+  background-color: red; /* For browsers that do not support gradients */
+  background-image: linear-gradient(beige, rgb(255, 255, 255));
+  margin: auto;
+}
+
+mat-sidenav {
   width: 200px;
-  margin-top: 60px;
-  background-color: rgb(156, 156, 144);
+  padding: 20px;
+  background-color: rgb(94, 94, 63);
   a:hover {
     color: lime;
     cursor: pointer;
     font-size: medium;
   }
-
-  a:hover {
-    font-size: 20px;
-    border: 2px solid #777;
-  }
 }
-
-// .sidenav .mat-toolbar {
-//   background: inherit;
-
-// }
 
 .mat-toolbar.mat-primary {
   position: sticky;
@@ -37,24 +33,6 @@
 
 .toolbar-filler {
   flex: 1 1 auto;
-}
-
-:host {
-  display: flex;
-  flex-direction: column;
-  outline: none;
-  width: 100%;
-  background-color: rgb(151, 178, 32);
-
-  .mat-list-item.active {
-    background-color: yellowgreen;
-  }
-  &:hover,
-  &:focus {
-    > .mat-list-item:not(.expanded) {
-      background-color: ivory;
-    }
-  }
 }
 
 mat-menu-item {
@@ -77,13 +55,6 @@ h1 {
 .a {
   border-radius: 5px;
   margin: 0 8px;
-}
-
-mat-sidenav-content {
-  height: 900px;
-  background-color: red; /* For browsers that do not support gradients */
-  background-image: linear-gradient(beige, rgb(255, 255, 255));
-  margin: auto;
 }
 
 h3,
