updated export components

--- a/src/app/pages/reports/reports.component.html
+++ b/src/app/pages/reports/reports.component.html
@@ -1,9 +1,17 @@
-<h1 style="font-weight: bolder; background-color: yellow; text-align: center;">Reports</h1>
+<h1 style="font-weight: bolder; background-color: yellow; text-align: center">
+  Reports
+</h1>
 
-<div class="row">
+<div class="container row">
   <div class="col">
     <div ngbDropdown class="d-inline-block">
-      <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>Customs Brokerage</button>
+      <button
+        class="btn btn-outline-primary"
+        id="dropdownBasic1"
+        ngbDropdownToggle
+      >
+        Customs Brokerage
+      </button>
       <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
         <button routerLink="entry" ngbDropdownItem>Entry Report</button>
         <button routerLink="liquidation" ngbDropdownItem>Liquidation</button>
@@ -14,7 +22,13 @@
 
   <div class="col">
     <div ngbDropdown class="d-inline-block">
-      <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>Profit and Loss</button>
+      <button
+        class="btn btn-outline-primary"
+        id="dropdownBasic1"
+        ngbDropdownToggle
+      >
+        Profit and Loss
+      </button>
       <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
         <button routerLink="pnlbyImporter" ngbDropdownItem>By Importer</button>
         <button routerLink="pnlbySalesman" ngbDropdownItem>By Salesman</button>
@@ -25,7 +39,13 @@
 
   <div class="col">
     <div ngbDropdown class="d-inline-block">
-      <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>Air Exports</button>
+      <button
+        class="btn btn-outline-primary"
+        id="dropdownBasic1"
+        ngbDropdownToggle
+      >
+        Air Exports
+      </button>
       <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
         <button ngbDropdownItem>Action - 1</button>
         <button ngbDropdownItem>Another Action</button>
@@ -36,7 +56,13 @@
 
   <div class="col">
     <div ngbDropdown class="d-inline-block">
-      <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>Ocean Exports</button>
+      <button
+        class="btn btn-outline-primary"
+        id="dropdownBasic1"
+        ngbDropdownToggle
+      >
+        Ocean Exports
+      </button>
       <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
         <button ngbDropdownItem>Action - 1</button>
         <button ngbDropdownItem>Another Action</button>
@@ -47,7 +73,13 @@
 
   <div class="col">
     <div ngbDropdown class="d-inline-block">
-      <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>Air Imports</button>
+      <button
+        class="btn btn-outline-primary"
+        id="dropdownBasic1"
+        ngbDropdownToggle
+      >
+        Air Imports
+      </button>
       <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
         <button ngbDropdownItem>Action - 1</button>
         <button ngbDropdownItem>Another Action</button>
@@ -58,7 +90,13 @@
 
   <div class="col">
     <div ngbDropdown class="d-inline-block">
-      <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>Ocean Imports</button>
+      <button
+        class="btn btn-outline-primary"
+        id="dropdownBasic1"
+        ngbDropdownToggle
+      >
+        Ocean Imports
+      </button>
       <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
         <button ngbDropdownItem>Action - 1</button>
         <button ngbDropdownItem>Another Action</button>
@@ -69,7 +107,13 @@
 
   <div class="col">
     <div ngbDropdown class="d-inline-block">
-      <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>AMS</button>
+      <button
+        class="btn btn-outline-primary"
+        id="dropdownBasic1"
+        ngbDropdownToggle
+      >
+        AMS
+      </button>
       <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
         <button ngbDropdownItem>Action - 1</button>
         <button ngbDropdownItem>Another Action</button>
@@ -80,7 +124,13 @@
 
   <div class="col">
     <div ngbDropdown class="d-inline-block">
-      <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>ISF</button>
+      <button
+        class="btn btn-outline-primary"
+        id="dropdownBasic1"
+        ngbDropdownToggle
+      >
+        ISF
+      </button>
       <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
         <button ngbDropdownItem>Action - 1</button>
         <button ngbDropdownItem>Another Action</button>
@@ -91,7 +141,13 @@
 
   <div class="col">
     <div ngbDropdown class="d-inline-block">
-      <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>Accounting</button>
+      <button
+        class="btn btn-outline-primary"
+        id="dropdownBasic1"
+        ngbDropdownToggle
+      >
+        Accounting
+      </button>
       <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
         <button ngbDropdownItem>Action - 1</button>
         <button ngbDropdownItem>Another Action</button>
@@ -102,7 +158,13 @@
 
   <div class="col">
     <div ngbDropdown class="d-inline-block">
-      <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>Compliance</button>
+      <button
+        class="btn btn-outline-primary"
+        id="dropdownBasic1"
+        ngbDropdownToggle
+      >
+        Compliance
+      </button>
       <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
         <button ngbDropdownItem>Action - 1</button>
         <button ngbDropdownItem>Another Action</button>
@@ -110,10 +172,6 @@
       </div>
     </div>
   </div>
-
-
-
 </div>
-
 
 <router-outlet></router-outlet>
