--- a/src/app/account/auth/login02/login02.component.html
+++ b/src/app/account/auth/login02/login02.component.html
@@ -1,62 +1,3 @@
-<div fxLayout="row" fxLayoutAlign="center center">
-  <mat-card fxFlex="30">
-    <img
-      src="https://cdn.pixabay.com/photo/2022/01/15/02/07/windows-6938478_960_720.jpg"
-    />
-  </mat-card>
-  <mat-card fxFlex="30">
-    <ul style="font-weight: bolder; color: rgb(69, 21, 200)">
-      Manufactuers / Shippers can
-      <li>Apply for Customs' assigned number</li>
-      <li>Obtain a continuous/annual bond</li>
-      <li>Clear U.S. Customs</li>
-      <li>Pay the duty online</li>
-      <li>Proof of Delivery</li>
-    </ul>
-  </mat-card>
-</div>
-<div fxLayout="row" fxLayoutAlign="center center">
-  <mat-card fxFlex="40">
-    <ul style="font-weight: bolder; color: chartreuse">
-      Importers or Exporters can
-      <li>Check duty payments</li>
-      <li>Detailed entry report</li>
-      <li>Liquidaiton report</li>
-      <li>Entry & PGA status</li>
-      <li>Delivery Status</li>
-    </ul>
-  </mat-card>
-  <mat-card fxFlex="40">
-    <img
-      src="https://cdn.pixabay.com/photo/2022/01/15/02/07/windows-6938478_960_720.jpg"
-    />
-  </mat-card>
-</div>
-
-<div fxLayout="row" fxLayoutAlign="center center">
-  <mat-card fxFlex="40">
-    <img
-      src="https://cdn.pixabay.com/photo/2022/01/15/02/07/windows-6938478_960_720.jpg"
-    />
-  </mat-card>
-  <mat-card fxFlex="40">
-    <ul style="font-weight: bolder; color: rgb(144, 107, 189)">
-      Forwarders can
-      <li>Check the entry status for clients</li>
-      <li>Upload documents for Customs' clearance</li>
-      <li>Duty reports for each client</li>
-      <li>Delivery status</li>
-      <li>Print entry documents</li>
-    </ul>
-  </mat-card>
-</div>
-<div fxLayout="row" fxLayoutAlign="center center">box 4</div>
-<div fxLayout="row" fxLayoutAlign="center center">box 5</div>
-<div fxLayout="row" fxLayoutAlign="center center">box 6</div>
-<div fxLayout="row" fxLayoutAlign="center center">box 7</div>
-<div fxLayout="row" fxLayoutAlign="center center">box 8</div>
-<div fxLayout="row" fxLayoutAlign="center center">box 9</div>
-
 <mat-card class="wrapper">
   <div class="login-wrapper" fxLayout="row" fxLayoutAlign="center center">
     <form
@@ -126,7 +67,6 @@
       "
     >
       <ul style="font-weight: bolder; color: blanchedalmond">
-        Manufactuers / Shippers can
         <li>Apply for Customs' assigned number</li>
         <li>Obtain a continuous/annual bond</li>
         <li>Clear U.S. Customs</li>
@@ -160,7 +100,6 @@
       "
     >
       <ul style="font-weight: bolder; color: chartreuse">
-        Importers or Exporters can
         <li>Check duty payments</li>
         <li>Detailed entry report</li>
         <li>Liquidaiton report</li>
@@ -194,7 +133,6 @@
       "
     >
       <ul style="font-weight: bolder; color: darkkhaki">
-        Forwarders can
         <li>Check the entry status for clients</li>
         <li>Upload documents for Customs' clearance</li>
         <li>Duty reports for each client</li>
@@ -228,7 +166,6 @@
       "
     >
       <ul style="font-weight: bolder; color: rgb(238, 222, 5)">
-        Truckers can
         <li>Receive the delivery order</li>
         <li>Generate the invoice</li>
         <li>Get paid</li>
@@ -258,7 +195,6 @@
       "
     >
       <ul style="font-weight: bolder; color: aliceblue">
-        CFS or Terminal Operators can
         <li>Download Manifest</li>
         <li>Receive payments</li>
         <li>Shipment tracking</li>
@@ -292,7 +228,6 @@
       "
     >
       <ul style="font-weight: bolder; color: greenyellow">
-        Air Carriers can
         <li>File AMS</li>
         <li>Cargo Manifest Status Query</li>
         <li>Receive payments</li>
@@ -322,7 +257,6 @@
       "
     >
       <ul style="font-weight: bolder; color: magenta">
-        Sea Carriers can
         <li>File AMS</li>
         <li>Shipment Status</li>
         <li>Route delivery</li>
@@ -345,11 +279,16 @@
 </div>
 
 <div fxLayout="row" fxLayoutAlign="space-around center">
-  <mat-card fxFlex="35">
+  <mat-card fxFlex="70">
     <mat-card-header>
       <mat-card-title> Other Service Providers </mat-card-title>
     </mat-card-header>
-    <mat-card-content>
+    <mat-card-content
+      style="
+        background-image: url('https://cdn.pixabay.com/photo/2022/01/10/15/29/wind-mills-6928590__340.jpg');
+        background-size: cover;
+      "
+    >
       <ul style="font-weight: bolder; color: darkkhaki">
         <li>Upload documents</li>
         <li>Download documents</li>
@@ -365,13 +304,5 @@
         </a>
       </mat-card-actions>
     </mat-card-content>
-  </mat-card>
-
-  <mat-card fxFlex="35">
-    <img
-      mat-card-lg-image
-      fxLayoutAlign="stretch"
-      src="https://cdn.pixabay.com/photo/2022/01/15/02/07/windows-6938478_960_720.jpg"
-    />
   </mat-card>
 </div>
