--- a/src/app/account/auth/login02/login02.component.scss
+++ b/src/app/account/auth/login02/login02.component.scss
@@ -35,7 +35,7 @@ body {
   top: 0;
   opacity: 1;
   float: left;
-  padding: 60px 50px 40px 50px;
+  padding: 10px;
   width: 100%;
   background: rgb(240, 210, 210);
   border-radius: 10px;
@@ -47,34 +47,32 @@ body {
   border: 2px double blue;
 }
 
-.box.back {
-  transform: scale(0.95);
-  -webkit-transform: scale(0.95);
-  -ms-transform: scale(0.95);
-  top: -20px;
-  opacity: 0.8;
-  z-index: -1;
-}
+// .box.back {
+//   transform: scale(0.95);
+//   -webkit-transform: scale(0.95);
+//   -ms-transform: scale(0.95);
+//   top: -20px;
+//   opacity: 0.8;
+//   z-index: -1;
+// }
 
-.box:before {
-  content: "";
-  width: 100%;
-  height: 30px;
-  border-radius: 10px;
-  position: absolute;
-  top: -10px;
-  background: rgba(255, 255, 255, 0.6);
-  left: 0;
-  transform: scale(0.95);
-  -webkit-transform: scale(0.95);
-  -ms-transform: scale(0.95);
-  z-index: -1;
-}
+// .box:before {
+//   content: "";
+//   width: 100%;
+//   height: 30px;
+//   border-radius: 10px;
+//   position: absolute;
+//   top: -10px;
+//   background: rgba(255, 255, 255, 0.6);
+//   left: 0;
+//   transform: scale(0.95);
+//   -webkit-transform: scale(0.95);
+//   -ms-transform: scale(0.95);
+//   z-index: -1;
+// }
 
 .login-wrapper .example-form {
-  min-width: 100%;
   max-width: 600px;
-  width: 100%;
 }
 
 // .login-wrapper .example-full-width,
@@ -108,11 +106,11 @@ body {
 //   padding: 0.8375em 0;
 // }
 
-// .example-card {
-//   max-width: 400px;
-//   height: auto;
-//   margin-top: 20px;
-// }
+.example-card {
+  max-width: 400px;
+  height: auto;
+  margin-top: 20px;
+}
 
 .wrapper {
   background-image: url("https://cdn.pixabay.com/photo/2022/01/13/16/37/trees-6935614__340.jpg");
@@ -130,4 +128,8 @@ body {
 // ul {
 //   padding: 20px;
 //   font-size: larger;
+// }
+
+// mat-card-content {
+//   text-align: center;
 // }
