--- a/src/app/pages/air-export/air-export.component.scss
+++ b/src/app/pages/air-export/air-export.component.scss
@@ -1,23 +1,29 @@
 table {
-    font-family: arial, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
-  }
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
 
-  td, th {
-    border: 1px solid #dddddd;
-    text-align: left;
-    padding: 8px;
-  }
+td,
+th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
 
-  tr:nth-child(even) {
-    background-color: #dddddd;
-  }
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
 
-  mat-form-field {
-    margin-right: 10px;
-  }
+mat-form-field {
+  margin-right: 10px;
+}
 
-  mat-card {
-    margin: 20 20 20 20;
-  }
+mat-card {
+  margin: 20 20 20 20;
+}
+
+.container {
+  max-width: 90%;
+  margin: auto;
+}
