--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,33 +7,32 @@
 @import "ag-grid-community/dist/styles/ag-theme-alpine.css";
 
 body {
-    margin: 1rem;
-    font-family: Lato, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen-Sans,
-      Ubuntu, Cantarell, sans-serif;
-    color: var(--color);
-    background-color: var(--background-color);
-  }
-  
-  .light-theme {
-    --primary: #7dd3fc;
-    --background-color: #fff;
-    --color: #0f172a;
-  }
-  
-  .dimmed-theme {
-    --primary: #e11d48;
-    --background-color: #4b5563;
-    --color: #fff;
-  }
-  
-  .dark-theme {
-    --primary: #059669;
-    --background-color: #0f172a;
-    --color: #f9fafb;
-  }
-  
-  html { 
-    background: url(../src/assets/images/BirdWater.jpg) no-repeat center fixed; 
-    background-size: cover;
-  }
-  
+  margin: 0.2rem;
+  font-family: Lato, -apple-system, BlinkMacSystemFont, "Segoe UI", Oxygen-Sans,
+    Ubuntu, Cantarell, sans-serif;
+  color: var(--color);
+  background-color: var(--background-color);
+}
+
+.light-theme {
+  --primary: #7dd3fc;
+  --background-color: #fff;
+  --color: #0f172a;
+}
+
+.dimmed-theme {
+  --primary: #e11d48;
+  --background-color: #4b5563;
+  --color: #fff;
+}
+
+.dark-theme {
+  --primary: #059669;
+  --background-color: #0f172a;
+  --color: #f9fafb;
+}
+
+html {
+  background: url(../src/assets/images/Fruits01.jpg) no-repeat center fixed;
+  background-size: cover;
+}
